--- a/labs/lab04_color_perception/lab04_color_perception.ipynb
+++ b/labs/lab04_color_perception/lab04_color_perception.ipynb
@@ -19,7 +19,7 @@
     "**Connection to previous labs:**\n",
     "- Lab 3 showed how image variations break models\n",
     "- Today you'll learn about one critical type of variation: **color**\n",
-    "- Understanding color spaces is essential for robust computer visio"
+    "- Understanding color spaces is essential for robust computer vision"
    ]
   },
   {
@@ -63,7 +63,7 @@
     "    else:\n",
     "        print(\"✓ Repository already exists\")\n",
     "    \n",
-    "    %cd computer-vision/labs/lab04_color\n",
+    "    %cd computer-vision/labs/lab04_color_perception\n",
     "    print(f\"✓ Current directory: {os.getcwd()}\")\n",
     "    \n",
     "    sys.path.insert(0, '/content/computer-vision')\n",
