Changes in sdx.py and lab 04

--- a/labs/lab04_color_perception/lab04_color_perception.ipynb
+++ b/labs/lab04_color_perception/lab04_color_perception.ipynb
@@ -137,7 +137,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = cv_imread('insper.png')\n",
+    "## read color image and do not convert to RGB\n",
+    "image = cv_imread('insper.png', as_rgb=False)\n",
     "\n",
     "cv_imshow(image)\n",
     "\n",
