Final fixes to lab04

--- a/labs/lab04_color_perception/lab04_color_perception.ipynb
+++ b/labs/lab04_color_perception/lab04_color_perception.ipynb
@@ -61,7 +61,8 @@
     "        !git clone https://github.com/mjck/computer-vision.git\n",
     "        print(\"✓ Repository cloned successfully\")\n",
     "    else:\n",
-    "        print(\"✓ Repository already exists\")\n",
+    "        !git -C computer-vision pull\n",
+    "        print(\"✓ Repository updated\")\n",
     "    \n",
     "    %cd computer-vision/labs/lab04_color_perception\n",
     "    print(f\"✓ Current directory: {os.getcwd()}\")\n",
@@ -140,7 +141,8 @@
     "## read color image and do not convert to RGB\n",
     "image = cv_imread('insper.png', as_rgb=False)\n",
     "\n",
-    "cv_imshow(image)\n",
+    "rgb_image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
+    "cv_imshow(rgb_image)\n",
     "\n",
     "print(f\"Image loaded: {image.shape}\")"
    ]
@@ -916,18 +918,7 @@
     "- [ ] Final reflection questions answered\n",
     "- [ ] All cells executed in order\n",
     "\n",
-    "**Grading (10 points total):**\n",
-    "\n",
-    "| Component | Points |\n",
-    "|-----------|--------|\n",
-    "| Activity 1: HSV normalization + segmentation | 2 |\n",
-    "| Activity 2: HLS normalization + segmentation | 2 |\n",
-    "| Activity 3: Lab normalization + segmentation | 2 |\n",
-    "| Challenge 1: Fix grayscale bug | 2 |\n",
-    "| Challenge 2: Weighted grayscale | 1 |\n",
-    "| Final reflection | 1 |\n",
-    "\n",
-    "**Bonus (+1 point):** Achieve excellent sky segmentation in any color space (minimal false positives/negatives)"
+    "**Above average:** Achieve excellent sky segmentation in any color space (minimal false positives/negatives)"
    ]
   }
  ],
