Corrected parenthesis in lab04

--- a/labs/lab04_color_perception/lab04_color_perception.ipynb
+++ b/labs/lab04_color_perception/lab04_color_perception.ipynb
@@ -141,7 +141,7 @@
     "## read color image and do not convert to RGB\n",
     "image = cv_imread('insper.png', as_rgb=False)\n",
     "\n",
-    "rgb_image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
+    "rgb_image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "cv_imshow(rgb_image)\n",
     "\n",
     "print(f\"Image loaded: {image.shape}\")"
