Another round of fixes for lab 04

--- a/labs/lab04_color_perception/lab04_color_perception_answers.ipynb
+++ b/labs/lab04_color_perception/lab04_color_perception_answers.ipynb
@@ -608,8 +608,7 @@
     "\n",
     "### Teaching Tip\n",
     "\n",
-    "Have students compare their HSV and HLS results side-by-side.\n",
-    "Ask: \"Which worked better for this image? Why?\" (No right answer — both can work!)"
+    "Which worked better for this image? Why?\" (No right answer — both can work!)"
    ]
   },
   {
