Another round of fixes for lab 04 answers

--- a/labs/lab04_color_perception/lab04_color_perception_answers.ipynb
+++ b/labs/lab04_color_perception/lab04_color_perception_answers.ipynb
@@ -937,7 +937,7 @@
     "\n",
     "All of these prevent overflow by using floating-point arithmetic.\n",
     "\n",
-    "### Common Student Approaches\n",
+    "### Common Approaches\n",
     "\n",
     "**Approach 1:** Cast each channel\n",
     "```python\n",
