Changes to lab05

--- a/labs/lab05_brightness_contrast/lab05_brightness_contrast.ipynb
+++ b/labs/lab05_brightness_contrast/lab05_brightness_contrast.ipynb
@@ -642,16 +642,9 @@
     "**Task:** Use local optimal contrast to find it.\n",
     "\n",
     "**Hints:**\n",
-    "- It's somewhere in the center-right area\n",
     "- You'll need to try different ROI coordinates\n",
     "- The syntax is: `output[y1:y2, x1:x2]`\n",
-    "- Remember: rows are Y (vertical), columns are X (horizontal)\n",
-    "\n",
-    "**Getting the coordinates:**\n",
-    "1. Display the image with `cv_imshow()`\n",
-    "2. Hover over areas to see coordinates (in Jupyter/Colab)\n",
-    "3. Identify the suspicious region\n",
-    "4. Adjust the ROI bounds to isolate it"
+    "- Remember: rows are Y (vertical), columns are X (horizontal)"
    ]
   },
   {
